<resources>
    <string name="app_name">Travelogue</string>
    <string name="app_subtitle">Share Your Travel Experience</string>
    <string name="title_label">Title</string>
    <string name="content_label">Content</string>
    <string name="image_label">Blog Image</string>
    <string name="location_label">Location</string>
    <string name="title_hint">Enter Your Hint</string>
    <string name="content_hint">Enter Your Content</string>
    <string name="location_hint">Enter Travel Destination</string>
    <string name="addBlogTitle">Add New Blog</string>
    <string name="share_blog">Share Blog</string>
    <string name="error_title_required">Title is required</string>
    <string name="error_content_required">Content is required</string>
    <string name="error_location_required">Location is required</string>
    <string name="update_option">Update</string>
    <string name="delete_option">Delete</string>
    <string name="update_blog_title_text">Update Blog</string>
    <string name="create_success_toast_text">Blog created successfully!</string>
    <string name="image_required_toast_text">Image is required!</string>
    <string name="update_success_toast_text">Blog updated successfully!</string>
    <string name="pick_image_from_text">Pick Image From</string>
    <string name="camera_storage_permission_required_toast_text">Camera &amp; Storage permissions are required</string>
    <string name="storage_permission_required_toast_text">Storage permission is required</string>
    <string name="image_selection_failed_toast_text">Failed to select image!</string>
    <string name="image_capture_failed_toast_text">Failed to capture image!</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="delete_blog_alert_title">Delete Blog</string>
    <string name="single_delete_confirm_text">Are you sure you want to delete this blog?</string>
    <string name="no_button_text">No</string>
    <string name="yes_button_text">Yes</string>
    <string name="all_blogs_title">All Blogs</string>
    <string name="total_text">Total: &#160;</string>
    <string name="sort_by_text">Sort By </string>
    <string name="sort_title_asc_text">Title Ascending</string>
    <string name="sort_title_des_text">Title Descending</string>
    <string name="sort_location_asc_text">Location Ascending</string>
    <string name="sort_location_des_text">Location Descending</string>
    <string name="delete_multiple_blog_alert_title">Delete Blogs</string>
    <string name="delete_multiple_confirm_text">Are you sure you want to delete selected blogs?</string>
    <string name="delete_multiple_success_toast">Selected blogs deleted</string>
    <string name="no_blogs_selected_toast_text">No blogs selected</string>
    <string name="delete_all_blog_alert_title">Delete All Blogs</string>
    <string name="delete_all_confirm_text">Are you sure you want to delete all blogs?</string>
    <string name="delete_all_success_toast">All blogs deleted</string>
    <string name="no_blogs_available_toast_text">No blogs available to delete</string>
    <string name="view_blog_title">View Blog</string>
    <string name="email_subject">Check out this blog!</string>
    <string name="email_body">Title: %1$s\nLocation: %2$s\nContent:\n%3$s</string>
    <string name="share_via_email">Share Blog via Email</string>
    <string name="invalid_image_uri">Invalid image URI</string>
    <string name="facebook_app_not_installed">Facebook app is not installed.</string>
    <string name="share_email_button_text">Share via Email</string>
    <string name="share_facebook_button_text">Post on Facebook</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="sign_in_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="already_user_text">Already an user? Login</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_invalid_email">Enter a valid email address</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_too_short">Password must be at least 6 characters</string>
    <string name="sign_up_successful">Sign-Up successful</string>
    <string name="login_successful">Login successful</string>
    <string name="new_user_text">Don\'t have an account, Signup</string>
    <string name="cloud_name">dbcadswtf</string>
    <string name="api_key">455125535466135</string>
    <string name="api_secret">eCzoSAGq0wTccFzfMhfq4dMW1vQ</string>
    <string name="logout_alert_title">Confirm Logout</string>
    <string name="logout_alert_content">Are you sure want to logout?</string>
</resources>