<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    tools:context=".AddUpdateBlogActivity">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createBlogTitle"
        android:textSize="30dp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"

        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_label"
        android:layout_below="@id/pageTitle"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/blogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLabel"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/title_hint"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/contentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/blogTitle"
        android:layout_marginTop="16dp"
        android:text="@string/content_label"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/blogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contentLabel"
        android:inputType="textMultiLine|textCapSentences"
        android:gravity="top"
        android:hint="@string/content_hint"
        android:minLines="1"
        android:maxLines="5"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/blogContent"
        android:layout_marginTop="16dp"
        android:text="@string/location_label"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/blogLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationLabel"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/location_hint"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/imageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/blogLocation"
        android:layout_marginTop="16dp"
        android:text="@string/image_label"
        android:textSize="20dp"/>

    <FrameLayout
        android:id="@+id/imageContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/imageLabel"
        android:layout_marginTop="12dp"
        android:background="@color/ash_600"
        android:padding="2dp">

        <ImageView
            android:id="@+id/blogImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_addphoto"
            android:scaleType="centerInside"/>
    </FrameLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/teal_700"
        app:srcCompat="@drawable/ic_done" />

</RelativeLayout>
